# market_data_streamer

./: README.md  docker-compose.yml
python-api/: Dockerfile  main.py
rust-streamer/: Cargo.toml  Dockerfile  dump.rdb
rust-streamer/src/: main.rs
