[package]
name = "rust-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.29.0", features = ["tokio-comp", "aio"] }
rustls = { version = "0.23", features = ["ring"] }
